--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ aiohttp-retry==2.8.3
 aiosignal==1.3.1
 anyio==4.0.0
 appdirs==1.4.4
-apsw==3.36.0.post1
+apsw==3.44.0
 apturl==0.5.2
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
