--- a/requirements.txt
+++ b/requirements.txt
@@ -1,238 +1,13 @@
-aiohttp==3.8.6
-aiohttp-retry==2.8.3
-aiosignal==1.3.1
-anyio==4.0.0
-appdirs==1.4.4
-apsw==3.44.0
-apturl==0.5.2
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.4.1
-async-lru==2.0.4
-async-timeout==4.0.3
-attrs==23.1.0
-autobahn==23.6.2
-Babel==2.13.1
-backcall==0.2.0
-bcrypt==3.2.0
-beautifulsoup4==4.12.2
-beniget==0.4.1
-bleach==6.1.0
 blinker==1.7.0
-Brlapi==0.8.3
-Brotli==1.0.9
-bs4==0.0.1
-certifi==2020.6.20
-cffi==1.16.0
-chardet==4.0.0
-charset-normalizer==3.3.2
 click==8.1.7
-colorama==0.4.4
-comm==0.2.0
-command-not-found==0.3
-cryptography==3.4.8
-css-parser==1.0.7
-cssselect==1.1.0
-cssutils==1.0.2
-cupshelpers==1.0
-cycler==0.11.0
-dbus-python==1.2.18
-debugpy==1.8.0
-decorator==5.1.1
-defer==1.0.6
-defusedxml==0.7.1
-distro==1.7.0
-distro-info==1.1+ubuntu0.1
-dnspython==2.1.0
-duplicity==0.8.21
-exceptiongroup==1.1.3
-executing==2.0.1
-fasteners==0.14.1
-fastjsonschema==2.18.1
-feedparser==6.0.8
 Flask==3.0.0
-Flask-Login==0.6.3
-Flask-SQLAlchemy==3.1.1
-fonttools==4.29.1
-fqdn==1.5.1
-frozenlist==1.4.0
-fs==2.4.12
-future==0.18.2
-gast==0.5.2
-greenlet==3.0.1
-gunicorn==21.2.0
-gyp==0.1
-html2text==2020.1.16
-html5-parser==0.4.10
-html5lib==1.1
-httplib2==0.20.2
-hyperlink==21.0.0
-idna==3.3
-ifaddr==0.1.7
-importlib-metadata==4.6.4
-invoke==2.2.0
-ipykernel==6.26.0
-ipython==8.17.2
-ipywidgets==8.1.1
-iso8601==2.1.0
-isoduration==20.11.0
 itsdangerous==2.1.2
-jedi==0.19.1
-jeepney==0.7.1
 Jinja2==3.1.2
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.19.2
-jsonschema-specifications==2023.7.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.9.0
-jupyter-lsp==2.2.0
-jupyter_client==8.6.0
-jupyter_core==5.5.0
-jupyter_server==2.10.0
-jupyter_server_proxy==4.1.0
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.8
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.9
-jupyterlab_server==2.25.1
-keyring==23.5.0
-kiwisolver==1.3.2
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lockfile==0.12.2
-louis==3.20.0
-lxml==4.8.0
-lz4==3.1.3+dfsg
-macaroonbakery==1.3.1
-Mako==1.1.3
-Markdown==3.3.6
 MarkupSafe==2.1.3
-matplotlib==3.5.1
-matplotlib-inline==0.1.6
-mechanize==0.4.7
-mistune==3.0.2
-monotonic==1.6
-more-itertools==8.10.0
-mpmath==0.0.0
-msgpack==1.0.3
-multidict==6.0.4
-nbclient==0.9.0
-nbconvert==7.11.0
-nbformat==5.9.2
-nest-asyncio==1.5.8
-netifaces==0.11.0
-notebook==7.0.6
-notebook_shim==0.2.3
 numpy==1.26.2
-oauthlib==3.2.0
-olefile==0.46
-overrides==7.4.0
-packaging==23.2
 pandas==2.1.3
-pandocfilters==1.5.0
-paramiko==2.9.3
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-picozero==0.4.2
-Pillow==9.0.1
-platformdirs==3.11.0
-ply==3.11
-prometheus-client==0.18.0
-prompt-toolkit==3.0.39
-protobuf==3.12.4
-psutil==5.9.6
-ptyprocess==0.7.0
-pure-eval==0.2.2
-py7zr==0.11.3+dfsg
-pycairo==1.20.1
-pychm==0.8.6
-pycparser==2.21
-pycryptodomex==3.11.0
-pycups==2.0.1
-Pygments==2.16.1
-PyGObject==3.42.1
-PyJWT==2.3.0
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyparsing==2.4.7
-PyQt5==5.15.6
-PyQt5-sip==12.9.1
-PyQtWebEngine==5.15.5
-pyRFC3339==1.1
-pyserial==3.5
-python-apt==2.4.0+ubuntu2
 python-dateutil==2.8.2
-python-debian==0.1.43+ubuntu1.1
-python-json-logger==2.0.7
-pythran==0.10.0
-pytz==2022.1
-pyxdg==0.27
-PyYAML==5.4.1
-pyzmq==25.1.1
-qtconsole==5.5.0
-QtPy==2.4.1
-referencing==0.30.2
-regex==2021.11.10
-reportlab==3.6.8
-repoze.lru==0.7
-requests==2.31.0
-requests-toolbelt==0.9.1
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-Routes==2.5.1
-rpds-py==0.12.0
-scipy==1.8.0
-SecretStorage==3.3.1
-Send2Trash==1.8.2
-sgmllib3k==1.0.0
-simpervisor==1.0.0
+pytz==2023.3.post1
 six==1.16.0
-sniffio==1.3.0
-soupsieve==2.5
-SQLAlchemy==2.0.23
-ssh-import-id==5.11
-stack-data==0.6.3
-sympy==1.9
-systemd-python==234
-terminado==0.18.0
-texttable==1.6.4
-tinycss2==1.2.1
-tksheet==6.2.5
-tomli==2.0.1
-tornado==6.3.3
-traitlets==5.13.0
-twilio==8.10.1
-txaio==23.1.1
-types-python-dateutil==2.8.19.14
-typing_extensions==4.8.0
 tzdata==2023.3
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufoLib2==0.13.1
-ufw==0.36.1
-unattended-upgrades==0.1
-unicodedata2==14.0.0
-uri-template==1.3.0
-urllib3==1.26.5
-usb-creator==0.3.7
-vpython==7.6.1
-wadllib==1.3.6
-wcwidth==0.2.9
-webcolors==1.13
-webencodings==0.5.1
-WebOb==1.8.6
-websocket-client==1.6.4
 Werkzeug==3.0.1
-widgetsnbextension==4.0.9
-wxPython==4.2.0
-xdg==5
-xkit==0.0.0
-yarl==1.9.2
-zeroconf==0.38.3
-zipp==1.0.0
